# halashao

./: .gitignore  Cargo.toml  package.json  pnpm-lock.yaml
app/: .CommentSearch.jsx.swp  AlertContent.jsx  CommentSearch.jsx  animated-progress.jsx  comment.jsx  layout.jsx  mock-data.js  page.jsx  use-comments.js  use-search.js
components/ui/: button.jsx  card.jsx  custom-alert-dialog.jsx  index.js  label.jsx  scroll-area.jsx
components/ui/variants/: button.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: client.rs  main.rs
src-tauri/src/config/: base_config.rs
src-tauri/src/tools/: crawler_util.rs  mod.rs  utils.rs
src-tauri/src/xhs/: client.rs  field.rs  help.rs  login.rs  mod.rs
