[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
headless_chrome = "1.0.10"
tauri = { version = "2", features = [] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21"
image = "0.24"
rand = "0.8"
regex = "1.5"
reqwest = { version = "0.11", features = ["json"] }
log = "0.4"
log4rs = "1.3"
lazy_static = "1.4"
anyhow = "1.0.90"
show-image = { version = "0.14.0", feature = ["image"] }
serde_urlencoded = "0.7.1"
async-trait = "0.1.83"
chrono = "0.4.31"
sha2 = "0.10.8"
url = "2.5.2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
